--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "btoa": "^1.2.1",
     "node-fetch": "^2.6.0"
+  },
+  "devDependencies": {
+    "@types/btoa": "^1.2.3",
+    "@types/node": "^12.12.12",
+    "@types/node-fetch": "^2.5.4",
+    "ts-node": "^8.5.2",
+    "typescript": "^3.7.2"
   }
 }
